# kafka-ai-python

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pr.yml
AI docs/: how-ai-helped-me-build-this.md
alembic/: env.py
avro/: message.avsc
docs/: getting-started.md  java-vs-python.md
src/: main.py
src/core/: config.py  logging.py
src/db/: mongo.py  postgres.py
src/department/: models.py  repository.py  router.py  schemas.py  service.py
src/employee/: models.py  repository.py  router.py  schemas.py  service.py
src/kafka/: avro_schema.py  consumer.py  producer.py
src/shared/: exceptions.py
tests/: conftest.py  test_department_api.py  test_employee_api.py  test_kafka_flow.py
