[project]
name = "kafka-ai-python"
version = "0.1.0"
description = "Event-driven FastAPI app — Kafka, Avro, PostgreSQL, MongoDB"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]>=0.136.3",
    "uvicorn[standard]>=0.34.0",
    "confluent-kafka[avro,schemaregistry]>=2.14.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "asyncpg>=0.30.0",
    "pymongo>=4.10.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.1",
    "alembic>=1.18.4",
    "structlog>=25.5.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.1",
    "testcontainers[postgres,kafka,mongodb]>=4.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.1",
    "testcontainers[postgres,kafka,mongodb]>=4.14.2",
]
